--- a/background/s_quality_general.tex
+++ b/background/s_quality_general.tex
@@ -1,6 +1,6 @@
 \section{Software Quality}
 
-Quality is an attribute of the item in question. It is often described as a combination of qualitative and quantitative attributes. Quality is an ambiguous attribute, because it is subjective and thus differs when viewed from different perspectives. The American Society for Quality has two definitions for technical quality: 1. the product's ability to satisfy its needs; 2. the product's lack of deficiencies~\cite{ASQglossary}. Software is one of the most used types of product in human history. At the same time it has one of the highest failure rates of any type of products mainly due to poor quality. With those facts, it is clear that the total influence of low quality software is considerable in both money and time. Still it is a known fact that a common practice to cut costs is reducing the effort used in software quality. Convincing the payer to allow using effort to achieve good quality can be difficult but crucial. The topic is widely researched and the results speak on behalf of quality.
+Quality is an attribute of the item in question. It is often described as a combination of qualitative and quantitative attributes. Quality is an ambiguous attribute, because it is subjective and thus differs when viewed from different perspectives. The American Society for Quality has two definitions for technical quality: 1. the product's ability to satisfy its needs; 2. the product's lack of deficiencies~\cite{ASQglossary}. Software is one of the most used types of product in human history. At the same time it has one of the highest failure rates of any type of products mainly due to poor quality. With those facts, it is clear that the total influence of low quality software is considerable in both money and time. Still it is a known fact that a common practice to cut costs is reducing the effort used in software quality. Convincing the payer to allow using effort to achieve good quality can be difficult but crucial. The topic is widely researched and the results speak on behalf of quality.~\cite{jones2011economics}
 
 % TODO: Tästä pitäisi johdatella seuraavaan sisältöön
 
@@ -9,10 +9,10 @@ Quality is an attribute of the item in question. It is often described as a comb
 Phil Crosby has made popular a concept that establishing a quality program will return in savings more than the program costs and thus "quality is free"~\cite{crosby1980quality}. Even though Crosby's concept is used mainly in the manufacturing sector, it has some truth that can be applied to the software business.  In addition, the "cost of quality" is a slightly inappropriate term, considering that quality in itself doesn't create costs but the lack of it does.
 
 %\ Cancellation 31\% for 10000 function point projects. Costs 35M\$ vs high quality 20m\$
-Studies have shown that software quality has huge impact on project costs and success. Measurements on 10000 function point projects show that about 31\% of projects of that size come to an end by cancellation. The average cost of these canceled projects is about \$35,000,000. Successful projects of similar size with good quality have about 40\% lower costs. These figures endorse the effort put towards the software quality and make it clear that at least in large scale projects, quality control shouldn't be ignored.
+Studies have shown that software quality has huge impact on project costs and success. Measurements on 10000 function point projects show that about 31\% of projects of that size come to an end by cancellation. The average cost of these canceled projects is about \$35,000,000. Successful projects of similar size with good quality have about 40\% lower costs. These figures endorse the effort put towards the software quality and make it clear that at least in large scale projects, quality control shouldn't be ignored.~\cite{jones2011economics}
 
 % ECO: page 19 Reduces the odds of large-system cancellations, Shortens development schedules, Lowers development costs, Lowers maintenance costs, Reduces warranty costs, Increases customer satisfaction
-Capers Jones has listed several points that make high quality a major economic benefit. In the development of large systems, high quality from the beginning can reduce the probability of cancellations. Software projects can also benefit by achieving shorter development schedules. Shorter schedules with high quality also lower the costs of a project. Lower development costs, maintenance costs and warranty costs can add up to considerable amounts of cost savings. In addition to the quantitative benefits, high quality raises the satisfaction of customers, end-users and developers. 
+Capers Jones has listed several points that make high quality a major economic benefit. In the development of large systems, high quality from the beginning can reduce the probability of cancellations. Software projects can also benefit by achieving shorter development schedules. Shorter schedules with high quality also lower the costs of a project. Lower development costs, maintenance costs and warranty costs can add up to considerable amounts of cost savings. In addition to the quantitative benefits, high quality raises the satisfaction of customers, end-users and developers.~\cite{jones2011economics}
 
 % ECO: it is gratifying to observe that high quality levels are invariably associated with shorter-than-average development schedules and lower-than-average development costs
 Jones expresses concerns towards the poor measurement of software quality causing executives and even quality personnel to treat software quality as an expense. Those participants may also treat quality as an issue that is raising the development costs and increasing development schedules. On the contrary, Jones summarizes the benefits of high quality: "However, from an analysis of about 13,000 software projects between 1973 and today, it is gratifying to observe that high quality levels are invariably associated with shorter-than-average development schedules and lower-than-average development costs".~\cite{jones2011economics}
@@ -28,7 +28,7 @@ The word "quality" has many tones and thus it complicates defining quality and e
 % Virallinen, ISO 25010: Functional suitability, Reliability, Operability, Performance efficiency, Security, Compatibility, Maintainability, Transferability
 
  
-The official quality standard in software is defined in ISO 25010. It was brought up to date in 2011 from ISO 9126 published in 1991. ISO 25010 introduces a quality model which classifies software quality in a set of characteristics each having a number of sub-characteristics. In the descriptions of the quality model's characteristics, it is assumed that the operation context is known and predetermined. Functional suitability is the degree to which the product provides functions that meet stated and implied needs. Reliability is the degree to which the product can perform specified functions for a specific period of time. Operability is the degree to which the product has attributes that enable it to be understood, learned, used and attractive to the user. Performance efficiency is the amount of resources the product uses under certain conditions. Security is degree of protection of information and data from unauthorized persons or systems trying to read, modify or access them. Compatibility is the degree to which two or more systems or components can exchange information, including, but not limited to, performing their required functions while sharing the same hardware or software environment. Maintainability is the degree of effectiveness and efficiency with which the product can be modified.  Transferability is the degree to which a system or component can be effectively and efficiently transferred from one hardware, software or other environment to another.
+The official quality standard in software is defined in ISO 25010. It was brought up to date in 2011 from ISO 9126 published in 1991. ISO 25010 introduces a quality model which classifies software quality in a set of characteristics each having a number of sub-characteristics. In the descriptions of the quality model's characteristics, it is assumed that the operation context is known and predetermined. Functional suitability is the degree to which the product provides functions that meet stated and implied needs. Reliability is the degree to which the product can perform specified functions for a specific period of time. Operability is the degree to which the product has attributes that enable it to be understood, learned, used and attractive to the user. Performance efficiency is the amount of resources the product uses under certain conditions. Security is degree of protection of information and data from unauthorized persons or systems trying to read, modify or access them. Compatibility is the degree to which two or more systems or components can exchange information, including, but not limited to, performing their required functions while sharing the same hardware or software environment. Maintainability is the degree of effectiveness and efficiency with which the product can be modified.  Transferability is the degree to which a system or component can be effectively and efficiently transferred from one hardware, software or other environment to another.~\cite{ISOBlog}
 
 In addition to the quality model, the 25010 standard defines the model of software quality in use. This model consists of five main characteristics. Effectiveness is the accuracy and completeness with which users achieve specified goals. Efficiency is the amount of consumed resources in relation to accuracy and completeness with which users achieve goals. Satisfaction is the degree to which users are satisfied with the experience of using the product.Safety is the degree to which a product does not lead to a state in which life, health, property, or the environment is endangered. Usability is the extent to which product can be used by specified users to achieve specified goals with effectiveness, efficiency and satisfaction.~\cite{ISOBlog}
 % Haikala s.48: toiminnan laatu vs tuotteen laatu
