--- a/general/c_intro.tex
+++ b/general/c_intro.tex
@@ -24,7 +24,7 @@ Since the amount of attempts for success are increasing, so is the amount of com
 % Kerrotaan perinteisten laadunvarmistusmenetelmien soveltumisesta nykyisiin startupin juttuihin
 % Käsitellään esimerkkinä CASE-projekti, joka on pienehkön budjetin projekti startupille
 
-In this thesis, software quality in a startup environment is discussed. Traditional quality improvement methods are presented and linked to the methods recommended in startup environments. Also a real-life software project for a Finnish startup is presented for illustration purposes. The project executed in Futurice, a Finnish software company, is evaluated by using the data gathered after the project from interviews of the project stakeholders.
+In this thesis, software quality in a startup environment is discussed. Traditional quality improvement methods are presented and linked to the methods recommended in startup environments. Also a real-life software project for a Finnish startup is presented for illustration purposes. The project, executed in a Finnish software company Futurice, is evaluated by using the data gathered after the project from interviews of the project stakeholders.
 
 %Rakenne luku kerrallaan + sisällön esittely "lause per luku"
 
