--- a/general/c_references.tex
+++ b/general/c_references.tex
@@ -2,9 +2,12 @@
 % lähdeluettelo
 % seuraavia voi käyttää bibtex:n kanssa (edellyttää tiedoston books.bib)
 
- \renewcommand{\bibname}{References}
- \bibliographystyle{plain}
- \bibliography{books}
+\renewcommand{\bibname}{References}
+\bibliographystyle{plain}
+\bibliography{books}
+
+% \printbibliography
+
 
 %\appendix
 %\renewcommand{\chaptername}{Liite}
