--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -49,64 +49,64 @@ Achieving high quality requires discipline in both team work and individual deve
 
 \subsection{Build Integrity In} 
 
-In the study by Kim Clark, a primary claim is that integrity is achieved through superior information flow. Perceived integrity is a projection of the integrity of the information flow between users and developers. In turn, conceptual integrity is a projection of the integrity of the upstream and downstream of technical information flow. When reaching a system with high perceived and conceptual integrity, an excellent information flow is necessary both between customer and development team and between the upstream and downstream processes of the development team. Information flows must take into account both the current and potential uses of the system.
+In the study by Kim Clark, a primary claim is that integrity is achieved through superior information flow. Perceived integrity is a projection of the integrity of the information flow between users and developers. In turn, conceptual integrity is a projection of the integrity of the upstream and downstream of technical information flow. When reaching a system with high perceived and conceptual integrity, an excellent information flow is necessary both between customer and development team and between the upstream and downstream processes of the development team. Information flows must take into account both the current and potential uses of the system.~\cite{poppendieck2003LSD}
 
-\textbf{Perceived integrity.} In traditional software development, perceived integrity is transmitted to programmers through a multistage process. In this process, requirements are collected and processed through analysis and design. Then the design is transfered to the programmers implementing the code. These multiple hand-offs will cause the loss of considerable amount of information, key details and future perspectives. Fortunately, an alternative for this multistage process is to establish a superior customer-developer information flow by other means. With smaller systems, the development should be done by a single team having direct access to the people capable of judging the systems integrity. This team should use short iterations in where the system is demonstrated to a wide range of people giving feedback about the integrity. This way the feedback can be used for a rapid steering of course. Another technique is to use customer tests purposely created for getting feedback.
+\textbf{Perceived integrity.} In traditional software development, perceived integrity is transmitted to programmers through a multistage process. In this process, requirements are collected and processed through analysis and design. Then the design is transfered to the programmers implementing the code. These multiple hand-offs will cause the loss of considerable amount of information, key details and future perspectives. Fortunately, an alternative for this multistage process is to establish a superior customer-developer information flow by other means. With smaller systems, the development should be done by a single team having direct access to the people capable of judging the systems integrity. This team should use short iterations in where the system is demonstrated to a wide range of people giving feedback about the integrity. This way the feedback can be used for a rapid steering of course. Another technique is to use customer tests purposely created for getting feedback.~\cite{poppendieck2003LSD}
 
 % Communicating two-ways face to face in small batches and solving the problems at the same time
 \textbf{Conceptual integrity.}
-Conceptual integrity in automotive manufacturing is pursued by using existing parts and integrated problem solving. In integrated problem solving, understanding and solving the problem happen simultaneously, instead of sequentially. The initial information is released early and not only after complete information is available. Information flow happens in two directions instead of one and it contains multiple small batches of information instead of a single large batch. The preferred communication style is face to face instead of documents. This kind of problem-solving is ideal for achieving conceptual product integrity, particularly in development of complex systems such as automobiles or software systems.
+Conceptual integrity in automotive manufacturing is pursued by using existing parts and integrated problem solving. In integrated problem solving, understanding and solving the problem happen simultaneously, instead of sequentially. The initial information is released early and not only after complete information is available. Information flow happens in two directions instead of one and it contains multiple small batches of information instead of a single large batch. The preferred communication style is face to face instead of documents. This kind of problem-solving is ideal for achieving conceptual product integrity, particularly in development of complex systems such as automobiles or software systems.~\cite{poppendieck2003LSD}
 
-In software development, using integrated problem solving means that the development must be started before the design is finalized. In addition, the developers should be able to access customers or customer representatives for getting the answers as soon as possible for any questions raised. Customer tests should be developed and ran along the iterations and not just at the end.
+In software development, using integrated problem solving means that the development must be started before the design is finalized. In addition, the developers should be able to access customers or customer representatives for getting the answers as soon as possible for any questions raised. Customer tests should be developed and ran along the iterations and not just at the end.~\cite{poppendieck2003LSD}
 
-Finally, using experienced developers in their own areas of expertise can help in achieving conceptual integrity. Not all of the developers have to be with plenty of experience, but for the complex areas, experience brings understanding of the technical details and patterns widely used to manage with the complexities. One of these experienced developers should be a master developer facilitating the effort over multiple teams. For example, integrating the decisions and trade-offs among multiple developers and customers would be the responsibility of the master developer.
+Finally, using experienced developers in their own areas of expertise can help in achieving conceptual integrity. Not all of the developers have to be with plenty of experience, but for the complex areas, experience brings understanding of the technical details and patterns widely used to manage with the complexities. One of these experienced developers should be a master developer facilitating the effort over multiple teams. For example, integrating the decisions and trade-offs among multiple developers and customers would be the responsibility of the master developer.~\cite{poppendieck2003LSD}
 
-\textbf{Refactoring.} When the integrity of a product is building, the iterative development brings continuous improvement as the product is evolving. In software development, the system must be continuously improved by the developers. Otherwise the internal structures of the software will become calcified and fragile. In time, the system will even stop working. Refactoring is done to prevent this disintegration of the software structures over the development.
+\textbf{Refactoring.} When the integrity of a product is building, the iterative development brings continuous improvement as the product is evolving. In software development, the system must be continuously improved by the developers. Otherwise the internal structures of the software will become calcified and fragile. In time, the system will even stop working. Refactoring is done to prevent this disintegration of the software structures over the development.~\cite{poppendieck2003LSD}
 
-The need for refactoring comes when new features are added to the system one at a time and the architecture and requirements of the system change gradually. Often it would be better to think of new related features as a set and build an architectural capability to support them. If the features are added in multiple different locations of the code, the system will lose conceptual integrity. Refactoring regularly keeps the system healthy.
+The need for refactoring comes when new features are added to the system one at a time and the architecture and requirements of the system change gradually. Often it would be better to think of new related features as a set and build an architectural capability to support them. If the features are added in multiple different locations of the code, the system will lose conceptual integrity. Refactoring regularly keeps the system healthy.~\cite{poppendieck2003LSD}
 
 % TODO: p. 142-144
 
-\textbf{Testing.} In a traditional software development where implementation is done single module at a time, there are numerous types of testing used. There are for example unit testing, system testing, integration testing and acceptance testing used. The purpose of testing is to check that the intention behind the design is achieved and the system does what the customers want it to. In LSD, the development is done by implementing entire features instead of single modules, so the distinction between the different kinds of testing is more artificial. Instead, testing is divided into two parts: developer tests and customer tests. Developer tests are testing that the implemented features work as intended and that all the pieces work together. Customer tests are developed to verify that the system does what customers expect.
+\textbf{Testing.} In a traditional software development where implementation is done single module at a time, there are numerous types of testing used. There are for example unit testing, system testing, integration testing and acceptance testing used. The purpose of testing is to check that the intention behind the design is achieved and the system does what the customers want it to. In LSD, the development is done by implementing entire features instead of single modules, so the distinction between the different kinds of testing is more artificial. Instead, testing is divided into two parts: developer tests and customer tests. Developer tests are testing that the implemented features work as intended and that all the pieces work together. Customer tests are developed to verify that the system does what customers expect.~\cite{poppendieck2003LSD}
 
-Tests act in several different roles in the development process. First, they present the exact functioning that the features are supposed to have. Second, they also supply information on whether the features actually work as supposed. Third, tests act as a scaffolding which provides support for tools such as refactoring. This allows the developers to make changes during the development. Fourth, after the development is done, the tests provide a representation of how the system was built. Finally, developing sufficient tests for all systems in production, making changes to these systems can be verified by running the tests for all related applications.
+Tests act in several different roles in the development process. First, they present the exact functioning that the features are supposed to have. Second, they also supply information on whether the features actually work as supposed. Third, tests act as a scaffolding which provides support for tools such as refactoring. This allows the developers to make changes during the development. Fourth, after the development is done, the tests provide a representation of how the system was built. Finally, developing sufficient tests for all systems in production, making changes to these systems can be verified by running the tests for all related applications.~\cite{poppendieck2003LSD}
 
-Tests can also work as a tool for communication. Customer tests can be written within the conversation with the customer about details of desired functionality. This way the tests can give the most accurate description of how the features should work for a customer. Likewise, developers can document the planned design by writing tests testing exactly what the design should do. There are other tools allowing the communication before the code is written, but there is no substitute for testing whether the system does what it is supposed to do. With this in mind, using tests for both tasks can be beneficial.
+Tests can also work as a tool for communication. Customer tests can be written within the conversation with the customer about details of desired functionality. This way the tests can give the most accurate description of how the features should work for a customer. Likewise, developers can document the planned design by writing tests testing exactly what the design should do. There are other tools allowing the communication before the code is written, but there is no substitute for testing whether the system does what it is supposed to do. With this in mind, using tests for both tasks can be beneficial.~\cite{poppendieck2003LSD}
 
-Receiving immediate feedback about the correct operation of code is important to a developer. The developer usually somehow tests the code as soon as its written, so the test could be captured as a written test allowing the reuse. Another opportunity to catch necessary experiments as tests is the review to customer within an iteration. Demonstrating the current system to a customer can be done with a set of demos or scripts, which can be captured as customer tests. These captured tests should be run as often as possible, so the team should ensure that the tests will not take too much time and are automated as much as possible.
+Receiving immediate feedback about the correct operation of code is important to a developer. The developer usually somehow tests the code as soon as its written, so the test could be captured as a written test allowing the reuse. Another opportunity to catch necessary experiments as tests is the review to customer within an iteration. Demonstrating the current system to a customer can be done with a set of demos or scripts, which can be captured as customer tests. These captured tests should be run as often as possible, so the team should ensure that the tests will not take too much time and are automated as much as possible.~\cite{poppendieck2003LSD}
 
-Using automated testing with extensive test suites for both developer testing and customer testing can be an efficient way to implement scaffolding to support the development. The scaffolding is a structure supporting the developers when they are making major changes to the system. While developing software in iterations, refactoring and other tools will include changes, which tend to have unintended effects. Having these effects in the system without the scaffolding provided by automatic tests can be an unsustainable situation. Often it may seem that writing tests slows down the development, but it pays back both during development and over the systems life cycle.
+Using automated testing with extensive test suites for both developer testing and customer testing can be an efficient way to implement scaffolding to support the development. The scaffolding is a structure supporting the developers when they are making major changes to the system. While developing software in iterations, refactoring and other tools will include changes, which tend to have unintended effects. Having these effects in the system without the scaffolding provided by automatic tests can be an unsustainable situation. Often it may seem that writing tests slows down the development, but it pays back both during development and over the systems life cycle.~\cite{poppendieck2003LSD}
 
 \subsection{Empower the Team}
 
-Lean thinking emphasized the importance of intelligent, disciplined and motivated frontline workers. In LSD, it is believed that the critical factor in motivation is empowerment. This means moving the decisions to the lowest possible level in the organization while assuring that those people have the ability and resources to decide wisely.
+Lean thinking emphasized the importance of intelligent, disciplined and motivated frontline workers. In LSD, it is believed that the critical factor in motivation is empowerment. This means moving the decisions to the lowest possible level in the organization while assuring that those people have the ability and resources to decide wisely.~\cite{poppendieck2003LSD}
 
 %\textbf{Self-Determination.}
 % Nummi
 
-\textbf{Motivation.} 3M is a company which is regularly meeting its goal that 30\% of each divisions sales is generated by products introduced in the last 4 years. This stream of new products has been keeping the company continually renewed for over 75 years. In the core of the company is a formula that allows the entrepreneurial spirit prosper. This vision includes that the heart of the company consists of small, self-organizing groups who are passionate about a possibility and are allowed to realize the possibility. This kind of invention forms a company which evolves from the creativity of the individual employees rather than from the planning of managers.
+\textbf{Motivation.} 3M is a company which is regularly meeting its goal that 30\% of each divisions sales is generated by products introduced in the last 4 years. This stream of new products has been keeping the company continually renewed for over 75 years. In the core of the company is a formula that allows the entrepreneurial spirit prosper. This vision includes that the heart of the company consists of small, self-organizing groups who are passionate about a possibility and are allowed to realize the possibility. This kind of invention forms a company which evolves from the creativity of the individual employees rather than from the planning of managers.~\cite{poppendieck2003LSD}
 
-In the book Lean Software Development, roots of motivation are described as follows: "Insintric motivation comes from the work we do, from pride in workmanship and a sens of helping a customer." Intrinsic motivation is specifically strong in a team which has a commitment for reaching towards a purpose the team cares about. 
+In the book Lean Software Development, roots of motivation are described as follows: "Insintric motivation comes from the work we do, from pride in workmanship and a sens of helping a customer." Intrinsic motivation is specifically strong in a team which has a commitment for reaching towards a purpose the team cares about.~\cite{poppendieck2003LSD}
 
-The sense of purpose can be achieved with several ways. In the beginning, there should be a clear and compelling purpose. This compelling purpose brings commitment and passion for bringing out the product. The purpose should be achievable. It should be made sure that the team has the capability and resources required for accomplishing the goal within itself. The team should be able to access the customers. Communicating with real customers can help understanding the purpose and also give insight into their individual work.
+The sense of purpose can be achieved with several ways. In the beginning, there should be a clear and compelling purpose. This compelling purpose brings commitment and passion for bringing out the product. The purpose should be achievable. It should be made sure that the team has the capability and resources required for accomplishing the goal within itself. The team should be able to access the customers. Communicating with real customers can help understanding the purpose and also give insight into their individual work.~\cite{poppendieck2003LSD}
 
-The team should make its own commitments. The amount of work fitting into the iteration should be a call made by the team. Commitment in a team is a commitment to each other. Managements role is to remove interference. A leader does not need to tell a motivated team what to do, but listen for how the team could advise the leader. This helps the leader to remove obstacles and thus maintaining the momentum of the team. The team should not have skeptics around, because people who know plenty of reasons why things cannot be done, can kill the purpose really fast.
+The team should make its own commitments. The amount of work fitting into the iteration should be a call made by the team. Commitment in a team is a commitment to each other. Managements role is to remove interference. A leader does not need to tell a motivated team what to do, but listen for how the team could advise the leader. This helps the leader to remove obstacles and thus maintaining the momentum of the team. The team should not have skeptics around, because people who know plenty of reasons why things cannot be done, can kill the purpose really fast.~\cite{poppendieck2003LSD}
 
-There are four building blocks of motivation. First, a feeling of belonging can be achieved in a team where members are equal and respect each other. Having winners and losers created in the team can seriously harm the feeling of belonging. Second, feeling of safety is about the atmosphere of making mistakes. Tolerating no mistakes will kill all initiative as in creative processes tolerance of mistakes cannot be zero. Third, a sense of competence comes from success in challenges, positive feedback, knowledge and skill. In addition, a good leader must justify that the team is on a right track and having the resources needed to be successful. Finally, sense of progress will be maintained when the team has the feeling of accomplishment. Developing software in iterations is supporting this feeling as in every iteration the team gets to put its work in front of the customer for feedback.
+There are four building blocks of motivation. First, a feeling of belonging can be achieved in a team where members are equal and respect each other. Having winners and losers created in the team can seriously harm the feeling of belonging. Second, feeling of safety is about the atmosphere of making mistakes. Tolerating no mistakes will kill all initiative as in creative processes tolerance of mistakes cannot be zero. Third, a sense of competence comes from success in challenges, positive feedback, knowledge and skill. In addition, a good leader must justify that the team is on a right track and having the resources needed to be successful. Finally, sense of progress will be maintained when the team has the feeling of accomplishment. Developing software in iterations is supporting this feeling as in every iteration the team gets to put its work in front of the customer for feedback.~\cite{poppendieck2003LSD}
 
-There are some downsides in passionate attitude towards a purpose. First, long working days and nights can be productive for a some time, but they are not a part of sustainable working culture. Second, different levels of passion are to be found inside teams. This means that there is a risk that the members of a team are expected to work long days. It is not fair for those not choosing them voluntarily and this can affect the spirit inside the team.
+There are some downsides in passionate attitude towards a purpose. First, long working days and nights can be productive for a some time, but they are not a part of sustainable working culture. Second, different levels of passion are to be found inside teams. This means that there is a risk that the members of a team are expected to work long days. It is not fair for those not choosing them voluntarily and this can affect the spirit inside the team.~\cite{poppendieck2003LSD}
 
-\textbf{Leadership.} Innovative teams at 3M are led by a passionate leader called "product champion". This leader is usually the person behind the initial product concept. Getting support from the management and forming the team are also in most cases done by this leader. The leader is supposed to represent the customer by interpreting the product vision to the team. In Toyota, there is a similar position called "chief engineer". He has complete responsibility for the vehicle and the power to make all the decisions. It is common in these positions that the product is named after the bearer of this position. Another similarity between these companies is that these leaders do not have direct authority over the people working in the team. They are the leaders of their teams, not managers. In LSD, these respected leaders are called "master developers".
+\textbf{Leadership.} Innovative teams at 3M are led by a passionate leader called "product champion". This leader is usually the person behind the initial product concept. Getting support from the management and forming the team are also in most cases done by this leader. The leader is supposed to represent the customer by interpreting the product vision to the team. In Toyota, there is a similar position called "chief engineer". He has complete responsibility for the vehicle and the power to make all the decisions. It is common in these positions that the product is named after the bearer of this position. Another similarity between these companies is that these leaders do not have direct authority over the people working in the team. They are the leaders of their teams, not managers. In LSD, these respected leaders are called "master developers".~\cite{poppendieck2003LSD}
 
-The position of a master developer is not usually designated, but it is emerged. It is not necessary that there is a known master developer in the beginning of a project. A person with deep experience and understanding on both technical and customer issues usually rises to this position. Master developer is part of the team working towards the purpose and empowering the team. Architects and other advisory roles are not likely in a role of master developer, because they are not a part of the team.
+The position of a master developer is not usually designated, but it is emerged. It is not necessary that there is a known master developer in the beginning of a project. A person with deep experience and understanding on both technical and customer issues usually rises to this position. Master developer is part of the team working towards the purpose and empowering the team. Architects and other advisory roles are not likely in a role of master developer, because they are not a part of the team.~\cite{poppendieck2003LSD}
 
-\textbf{Expertise.} In software development, there are two major areas of expertise: technical knowledge and domain knowledge. Technical knowledge creates experts in areas such as database administration, user interface design and embedded code. Domain knowledge includes understanding of the domain of the business, for example health-care or security.
+\textbf{Expertise.} In software development, there are two major areas of expertise: technical knowledge and domain knowledge. Technical knowledge creates experts in areas such as database administration, user interface design and embedded code. Domain knowledge includes understanding of the domain of the business, for example health-care or security.~\cite{poppendieck2003LSD}
 
-Expertise in different areas evolves best in communities of expertise, where people responsible for same kind of activities meet. A traditional method of developing these communities inside a company is to divide the company into functions by core competence. These functions can include program leaders guiding the teams in product development. This structure is called a matrix organization.
+Expertise in different areas evolves best in communities of expertise, where people responsible for same kind of activities meet. A traditional method of developing these communities inside a company is to divide the company into functions by core competence. These functions can include program leaders guiding the teams in product development. This structure is called a matrix organization.~\cite{poppendieck2003LSD}
 
-In a successful matrix organization the two managers each person has, view their jobs correctly. Functional managers should act as mentors and teachers. They should supply the inexperienced members of the team with support and coaching through progressive series of assignments. Value adding managers should view their jobs as enablers and motivators who remove impediments and supply resources to the team.
+In a successful matrix organization the two managers each person has, view their jobs correctly. Functional managers should act as mentors and teachers. They should supply the inexperienced members of the team with support and coaching through progressive series of assignments. Value adding managers should view their jobs as enablers and motivators who remove impediments and supply resources to the team.~\cite{poppendieck2003LSD}
 
-Companies not using matrix organization should also preserve communities of expertise. These communities can be gathered by identifying the areas of competence in both technical and domain knowledge. The members in formed communities should be available for communication and information sharing using repetitive meetings or other media reaching everyone in the community. If the amount of experts in a critical area is not sufficient for forming internal community, external communities are usually available for support in the expertise.
+Companies not using matrix organization should also preserve communities of expertise. These communities can be gathered by identifying the areas of competence in both technical and domain knowledge. The members in formed communities should be available for communication and information sharing using repetitive meetings or other media reaching everyone in the community. If the amount of experts in a critical area is not sufficient for forming internal community, external communities are usually available for support in the expertise.~\cite{poppendieck2003LSD}
 
 % \subsection{TDD}
 
@@ -139,13 +139,13 @@ Using these pretest defect removal methods can be beneficial also when doing LSD
 \end{figure}
 
 
-\textbf{Testing.} Using traditional testing methods in startup environment is a topic which has to be planned per project. As LSD divides testing in developer and customer tests, each project has to decide which of the traditional methods of testing have the best result when applied. Plain unit testing and subroutine testing can be relevant in some situations, but the use of excessive unit testing in pursuit for full test coverage can be waste of time and resources. In startup environment, the development is usually done as a cross-application development covering full features. In this kind of development the testing should be focused on testing the application as a whole. Though, testing parts of the application can be useful and even necessary depending on the software.
+\textbf{Testing.} Using traditional testing methods in startup environment is a topic which has to be planned per project. As LSD divides testing in developer and customer tests, each project has to decide which of the traditional methods of testing have the best result when applied. Plain unit testing and subroutine testing can be relevant in some situations, but the use of excessive unit testing in pursuit for full test coverage can be waste of time and resources. In startup environment, the development is usually done as a cross-application development covering full features. In this kind of development the testing should be focused on testing the application as a whole. Though, testing single parts of the application can be useful and even necessary depending on the software.
 
 \section{The Don'ts - Things To Avoid}
 
 % Liittyy vahvasti Leanin Wasteen
 %	~\cite{poppendieck2006implementing}
-When aiming for satisfactory quality, one common mistake is to put the effort available on wrong target. Lean methodology appoints this as waste and seeks to eliminate it. Mary and Tom Poppendieck have interpreted waste in LSD as anything that does not add value or "anything that interferes with giving customers what they value at the time". Some main forms of waste highlighted in their book are partially done work, "churn" and extra features. Partially done work can get obsolete, hide quality problems and ties up money. "Churn" means excessive amounts of unproductive work. "Churn" can include requirements churn, churn in testing long after coding or churn created by delayed integration. These software development churns are usually associated to large inventories of partially done work. Finally, extra features are a major factor in increasing the cost of development. In the book there is an estimate that two-thirds of all features and functions of typical software are only rarely used. These features just increase the complexity of the code.~\cite{poppendieck2006implementing} 
+When aiming for satisfactory quality, one common mistake is to put the effort available on wrong target. Lean methodology appoints this as waste and seeks to eliminate it. Mary and Tom Poppendieck have interpreted waste in LSD as anything that does not add value or "anything that interferes with giving customers what they value at the time". Some main forms of waste highlighted in their book are partially done work, "churn" and extra features. Partially done work can get obsolete, hide quality problems and ties up money. Churn means excessive amounts of unproductive work. Churn can include requirements churn, churn in testing long after coding or churn created by delayed integration. These software development churns are usually associated to large inventories of partially done work. Finally, extra features are a major factor in increasing the cost of development. In the book there is an estimate that two-thirds of all features and functions of typical software are only rarely used. These features just increase the complexity of the code.~\cite{poppendieck2006implementing} 
 
 % DEFECT TRACKING IS A WASTE
 %	http://books.google.fi/books?id=RTt9AgAAQBAJ p. 27
