--- a/case/s_objectives.tex
+++ b/case/s_objectives.tex
@@ -3,9 +3,9 @@
 
 The project was built on an idea from MukavaIT. The big picture and the goals of the project were specified in advance and introduced to the developing team. Lower level specifications and implementation details were designed in cooperation between MukavaIT and the development team.
 
-The objective of the project was to create a new kind of recording system for kindergartens. The system would allow the tracking of the arrival, departure and absences of the children in the groups. The main goal was to make a user-friendly system which connects parents, employees of the kindergartens and the administrative personnel in the municipality. The connection between the stakeholders would enable the planning of the need for day care and the real-time tracking of the nurses and children. The eventual goal of the system would be the dynamic hour-based billing models. In addition to this, the system would produce several types of reports for the administrative personnel for optimizing the daycare system.
+The objective of the project was to create a new kind of recording system for kindergartens. The system would allow the tracking of the arrival, departure and absences of the children in the groups. The main goal was to make a user-friendly system which connects parents, employees of the kindergartens and the administrative personnel in the municipality. The connection between the stakeholders would enable the planning of the need for day care and the real-time tracking of the nurses and children. Eventual goal of the system would be dynamic hour-based billing models. In addition to this, the system would produce several types of reports for administrative personnel for optimizing the daycare system.
 
-The most important functionality of the system would be that the nurses are able to record the presences of the children with mobile devices. The recordings will be collected to a database serving different services for nurses, parents and administrative personnel in the kindergartens. The services would include a mobile client for nurses, a desktop client for parents and another desktop client for administrative personnel. A common goal in which these clients are aimed at, is to bring the daycare system towards a genuinely transparent process, which encourages the parents to participate more in the early childhood education.
+The most important functionality of the system would be that nurses are able to record the presences of the children with mobile devices. The records will be collected to a database serving different services for nurses, parents and administrative personnel in the kindergartens. The services would include a mobile client for nurses, a desktop client for parents and another desktop client for administrative personnel. A common goal in which these clients are aimed at, is to bring the daycare system towards a genuinely transparent process, which encourages the parents to participate more in the early childhood education.
 
 During the development, a better understanding of the market was achieved. It was learned that reaching towards the hour-based billing models and the report generation was not as necessary as it first seemed. The stakeholders became interested already as the first version of the system was released into pilot use. The features that allowed the parents to communicate with the nurses were something the parents were excited of. In addition, the recording and checking the presences, communicating with the parents and storing the information about the children all in the same system were inspirational for the nurses.
 
